# pleiades

./: .codeclimate.yml  .envrc  .gitignore  .gitlab-ci.yml  .gitpod.yml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  WORKSPACE  buf.gen.yaml  buf.work.yaml  config.json  deps.bzl  gen.sh  go.mod  go.sum  license-notes.md  magefile.go  main.go  package.json  pleiades  raft.json  render-vars.sh  rust-toolchain.toml  tools.go
cmd/: BUILD.bazel  account.go  account_create.go  account_delete.go  base.go  base_command.go  base_flags.go  bucket.go  bucket_create.go  bucket_delete.go  dev.go  dev_account.go  dev_account_create.go  dev_account_delete.go  dev_bucket.go  dev_bucket_create.go  dev_bucket_delete.go  dev_bucket_get.go  dev_bucket_put.go  dev_kev_get.go  dev_kev_put.go  dev_kv.go  dev_kv_delete.go  dev_server.go  fabric.go  fabric_add_replica.go  fabric_add_replica_observer.go  fabric_add_replica_witness.go  fabric_add_shard.go  fabric_get_leader_id.go  fabric_get_shard_members.go  fabric_remove_data.go  fabric_remove_replica.go  fabric_start_replica.go  fabric_start_replica_observer.go  fabric_stop_replica.go  formatting.go  get.go  globals.go  kev_delete.go  (+13 more)
cmd/artpub/: BUILD.bazel  main.go
cmd/cli/: BUILD.bazel  account.go  account_create.go  account_delete.go  base_command.go  base_flags.go  bucket.go  bucket_create.go  bucket_delete.go  fabric.go  fabric_add_replica.go  fabric_add_replica_observer.go  fabric_add_replica_witness.go  fabric_add_shard.go  fabric_get_leader_id.go  fabric_get_shard_members.go  fabric_remove_data.go  fabric_remove_replica.go  fabric_start_replica.go  fabric_start_replica_observer.go  fabric_stop_replica.go  formatting.go  globals.go  kev_delete.go  kev_put.go  kv.go  kv_get.go  root_commands.go  server.go  tracing.go
pkg/configuration/: BUILD.bazel  flags.go  gossip.go  helpers.go  logger.go  logger_test.go  node_host_config.go  schema.go  schema_test.go  viper.go
pkg/errorspb/: BUILD.bazel  error_codes.pb.go  error_codes.proto  errors.pb.go  errors.proto  errors_vtproto.pb.go
pkg/fsm/: BUILD.bazel  bbolt_fsm.go  bbolt_fsm_test.go  config_service_store_manager.go  config_service_store_manager_test.go  consts.go  fsm_key.go  fsm_key_test.go  kv_format.go  quantum_fsm.go  raft_manager.go  raft_manager_test.go  shard_store.go  shard_store_test.go
pkg/fsm/kv/: BUILD.bazel  bbolt.go  bbolt_fsm.go  bbolt_fsm_test.go  bbolt_test.go  encoding.go  encoding_test.go
pkg/fsm/systemstore/: datastore.go  default_datastore.go  system_store.go  system_store_test.go
pkg/kvpb/: BUILD.bazel  kv.pb.go  kv.proto  kv_vtproto.pb.go  service.pb.go  service.proto  transactions.pb.go  transactions.proto  transactions_vtproto.pb.go
pkg/kvpb/kvpbconnect/: BUILD.bazel  service.connect.go
pkg/messaging/: BUILD.bazel  embedded_messaging.go  embedded_messaging_test.go  embedded_workflow.go  gossip.go  logger.go  raft_event_handler.go  raft_event_handler_test.go  raft_system_listener.go  raft_system_listener_test.go
pkg/messaging/clients/: clients.go
pkg/messaging/raft/: raft_event_handler.go  raft_event_handler_test.go  raft_system_listener.go  raft_system_listener_test.go
pkg/messaging/workflow/: workflow_executor.go  workflow_runtime.go
pkg/messaging/workflow/operation/: operation.go
pkg/messaging/workflow/runtime/: consts.go  handle_error.go  hmac.go  request.go  response.go  runtime.go  types.go  workflow.go  workflow_backend.go  workflow_backend_test.go
pkg/messaging/workflow/runtime/execution/: context.go  (+3 more)
pkg/raftpb/: BUILD.bazel  raft_event.pb.go  raft_event.proto  raft_event_vtproto.pb.go  raft_host.pb.go  raft_host.proto  raft_host_vtproto.pb.go  raft_shard.pb.go  raft_shard.proto  raft_shard_vtproto.pb.go  service.pb.go  service.proto
pkg/raftpb/raftpbconnect/: BUILD.bazel  service.connect.go
pkg/routing/: BUILD.bazel  hash.go  hash_test.go  shard.go  shard_test.go
pkg/server/: BUILD.bazel  consts.go  frame.go  frame_test.go  interfaces.go  kv.pb.go  kv.proto  kv_grpc.pb.go  kvstore_bbolt_connect_adapter.go  kvstore_transaction_connect_adapter.go  kvstore_transaction_connection_adapter.go  raft_bbolt_manager.go  raft_bbolt_manager_test.go  raft_bbolt_store_grpc_adapter.go  raft_bbolt_store_grpc_adapter_test.go  raft_bbolt_store_manager.go  raft_bbolt_store_manager_test.go  raft_cluster.go  raft_cluster_config.go  raft_cluster_test.go  raft_control.go  raft_control_grpc.go  raft_control_grpc_test.go  raft_control_rpc.go  raft_control_test.go  raft_host.go  raft_host_connect_adapter.go  raft_host_grpc_adapter.go  raft_host_grpc_adapter_test.go  raft_host_test.go  raft_session_manager.go  raft_session_manager_rpc.go  raft_session_manager_test.go  raft_shard.go  raft_shard_connect_adapter.go  raft_shard_grpc_adapter.go  raft_shard_grpc_adapter_test.go  raft_shard_test.go  raft_store_manager.go  raft_transaction_grpc_adapter.go  (+24 more)
pkg/server/eventing/: BUILD.bazel  consts.go  lifecycle_manager.go  lifecycle_manager_test.go  module.go  server.go  shard_config_runner.go  shard_config_runner_test.go
pkg/server/gossip/: BUILD.bazel  serf.go
pkg/server/kvstore/: BUILD.bazel  kvstore_bbolt_connect_adapter.go  kvstore_transaction_connect_adapter.go  module.go  raft_bbolt_store_manager.go  raft_bbolt_store_manager_test.go  shard_router.go  shard_router_test.go
pkg/server/raft/: BUILD.bazel  module.go  raft_host.go  raft_host_connect_adapter.go  raft_host_test.go
pkg/server/runtime/: BUILD.bazel  cache.go  interfaces.go  types.go
pkg/server/serverutils/: logger.go  test_nodehost.go  test_statemachine.go
pkg/server/shard/: BUILD.bazel  module.go  raft_shard.go  raft_shard_connect_adapter.go  raft_shard_test.go  statemachine.go
pkg/server/transactions/: BUILD.bazel  module.go  raft_transaction_manager.go  raft_transaction_manager_test.go
pkg/utils/: BUILD.bazel  copy.go  math.go  random.go  test_logger.go  test_nodehost.go  test_statemachine.go  waiter.go
pkg/utils/serverutils/: BUILD.bazel  logger.go  test_statemachine.go
src/components/time/hlc/: Cargo.toml  hlc.rs  mod.rs
(+943 files in other folders)
