load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mxplusb/pleiades
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "pleiades_lib",
    srcs = ["main.go"],
    importpath = "github.com/mxplusb/pleiades",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/cli",
        "@com_github_planetscale_vtprotobuf//codec/grpc",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//encoding",
        "@org_golang_google_grpc//encoding/proto",
    ],
)

go_binary(
    name = "pleiades",
    out = "pleiades",  # keep
    embed = [":pleiades_lib"],
    gc_linkopts = [
        "-w",
        "-s",
    ],
    pure = "on",  # keep
    visibility = ["//visibility:public"],
)
