[package]
name = "pleiades"
version = "3.0.0-alpha"
authors = ["Sienna Lloyd"]
description = "A lightning-fast constellation mesh"
license = "GPL-3.0-only"
keywords = ["kv", "distributed-systems", "raft", "constellation", "mesh"]
homepage = "https://github.com/mxplusb/pleiades"
repository = "https://github.com/mxplusb/pleiades"
readme = "README.md"
edition = "2021"
publish = false
