[package]
name = "pleiades"
version = "3.0.0-alpha"
authors = ["Pleiades Authors", "Sienna Lloyd"]
description = "A lightning-fast constellation mesh"
license = "GPL-3.0-only"
keywords = ["kv", "distributed-systems", "raft", "constellation", "mesh"]
homepage = "https://github.com/mxplusb/pleiades"
repository = "https://github.com/mxplusb/pleiades"
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4.4", features = ["derive", "env"] }
log = "0.4.20"
mimalloc = "0.1.39"
rand = "0.8.5"
tracing = { version = "0.1.37", features = ["log-always"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "fmt", "std", "env-filter"] }
