load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "account.go",
        "account_create.go",
        "account_delete.go",
        "base_command.go",
        "base_flags.go",
        "bucket.go",
        "bucket_create.go",
        "bucket_delete.go",
        "fabric.go",
        "fabric_add_replica.go",
        "fabric_add_replica_observer.go",
        "fabric_add_replica_witness.go",
        "fabric_add_shard.go",
        "fabric_get_leader_id.go",
        "fabric_get_shard_members.go",
        "fabric_remove_data.go",
        "fabric_remove_replica.go",
        "fabric_start_replica.go",
        "fabric_start_replica_observer.go",
        "fabric_stop_replica.go",
        "formatting.go",
        "globals.go",
        "kev_delete.go",
        "kev_put.go",
        "kv.go",
        "kv_get.go",
        "root_commands.go",
        "server.go",
        "tracing.go",
    ],
    importpath = "github.com/mxplusb/pleiades/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg",
        "//pkg/configuration",
        "//pkg/kvpb",
        "//pkg/kvpb/kvpbconnect",
        "//pkg/raftpb",  # keep
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server",
        "//pkg/utils/serverutils",
        "@com_github_bufbuild_connect_go//:go_default_library",
        "@com_github_hashicorp_go_secure_stdlib_parseutil//:go_default_library",
        "@com_github_kr_text//:go_default_library",
        "@com_github_lni_dragonboat_v3//config:go_default_library",
        "@com_github_mitchellh_cli//:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_mitchellh_go_wordwrap//:go_default_library",
        "@com_github_posener_complete//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel_exporters_jaeger//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_fx//fxevent:go_default_library",
    ],
)
