load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "command", "multirun")

go_library(
    name = "artpub_lib",
    srcs = ["main.go"],
    importpath = "github.com/mxplusb/pleiades/cmd/artpub",
    visibility = ["//visibility:private"],
    deps = ["@land_oras_oras//cmd/oras/root"],
)

go_binary(
    name = "artpub",
    embed = [":artpub_lib"],
    visibility = ["//visibility:public"],
)
