load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "errors_proto",
    srcs = [
        "error_codes.proto",
        "errors.proto",
    ],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "errors_go_proto",
    importpath = "github.com/mxplusb/pleiades/pkg/errorspb",
    proto = ":errors_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "errorspb",
    srcs = ["errors_vtproto.pb.go"],
    embed = [":errors_go_proto"],
    importpath = "github.com/mxplusb/pleiades/pkg/errorspb",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_protobuf//runtime/protoimpl:go_default_library"],
)
