load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "kvpb_proto",
    srcs = [
        "kv.proto",
        "service.proto",
        "transactions.proto",
    ],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errorspb:errors_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "kvpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mxplusb/pleiades/pkg/kvpb",
    proto = ":kvpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/errorspb"],
)

go_library(
    name = "kvpb",
    srcs = [
        "kv_vtproto.pb.go",
        "transactions_vtproto.pb.go",
    ],
    embed = [":kvpb_go_proto"],
    importpath = "github.com/mxplusb/pleiades/pkg/kvpb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errorspb",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
