load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:resolve proto go github.com/mxplusb/pleiades/pkg/raftpb //pkg/raftpb:raft_go_proto

go_library(
    name = "messaging",
    srcs = [
        "embedded_messaging.go",
        "logger.go",
        "raft_event_handler.go",
        "raft_system_listener.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/messaging",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/raftpb",
        "@com_github_lni_dragonboat_v3//raftio",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_nats_io_nats_server_v2//server",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "messaging_test",
    srcs = [
        "embedded_messaging_test.go",
        "raft_event_handler_test.go",
        "raft_system_listener_test.go",
    ],
    embed = [":messaging"],
    deps = [
        "//pkg/raftpb",
        "//pkg/utils",
        "@com_github_lni_dragonboat_v3//raftio",
        "@com_github_nats_io_nats_go//:nats_go",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//suite",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_fx//fxtest",
    ],
)
