load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "raft_proto",
    srcs = [
        "raft_event.proto",
        "raft_host.proto",
        "raft_shard.proto",
        "service.proto",
    ],
    strip_import_prefix = "/pkg",
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "raft_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mxplusb/pleiades/pkg/raftpb",
    proto = ":raft_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "raftpb",
    srcs = [
        "raft_event_vtproto.pb.go",
        "raft_host_vtproto.pb.go",
        "raft_shard_vtproto.pb.go",
    ],
    embed = [":raft_go_proto"],
    importpath = "github.com/mxplusb/pleiades/pkg/raftpb",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
