load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "routing",
    srcs = ["shard.go"],
    importpath = "github.com/mxplusb/pleiades/pkg/routing",
    visibility = ["//visibility:public"],
)

go_test(
    name = "routing_test",
    srcs = ["shard_test.go"],
    embed = [":routing"],
)
