load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["runtime.go"],
    importpath = "github.com/mxplusb/pleiades/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kvpb/kvpbconnect",
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server/eventing",
        "//pkg/server/kvstore",
        "//pkg/server/raft",
        "//pkg/server/runtime",
        "//pkg/server/shard",
        "//pkg/server/transactions",
        "//pkg/utils/serverutils",
        "@com_github_bufbuild_connect_grpchealth_go//:go_default_library",
        "@com_github_bufbuild_connect_grpcreflect_go//:go_default_library",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_lni_dragonboat_v3//config:go_default_library",
        "@com_github_lni_dragonboat_v3//logger:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
