load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["runtime.go"],
    importpath = "github.com/mxplusb/pleiades/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kvpb/kvpbconnect",
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server/eventing",
        "//pkg/server/kvstore",
        "//pkg/server/raft",
        "//pkg/server/runtime",
        "//pkg/server/shard",
        "//pkg/server/transactions",
        "//pkg/utils/serverutils",
        "@com_github_bufbuild_connect_grpchealth_go//:connect-grpchealth-go",
        "@com_github_bufbuild_connect_grpcreflect_go//:connect-grpcreflect-go",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_lni_dragonboat_v3//config",
        "@com_github_lni_dragonboat_v3//logger",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
        "@org_uber_go_fx//:fx",
    ],
)
