load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "copy.go",
        "math.go",
        "random.go",
        "test_logger.go",
        "waiter.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_x_exp//rand",
    ],
)
