load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kv",
    srcs = [
        "bbolt.go",
        "bbolt_fsm.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/fsm/kv",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configuration",
        "//pkg/errorspb",
        "//pkg/kvpb",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_lni_dragonboat_v3//statemachine:go_default_library",
        "@com_github_planetscale_vtprotobuf//codec/grpc:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_golang_google_grpc//encoding:go_default_library",
        "@org_golang_google_grpc//encoding/proto:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)

go_test(
    name = "kv_test",
    srcs = [
        "bbolt_fsm_test.go",
        "bbolt_test.go",
    ],
    embed = [":kv"],
    deps = [
        "//pkg/configuration",
        "//pkg/kvpb",
        "//pkg/utils",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_lni_dragonboat_v3//statemachine:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
