load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kv",
    srcs = [
        "bbolt.go",
        "bbolt_fsm.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/fsm/kv",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/configuration",
        "//pkg/errorspb",
        "//pkg/kvpb",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lni_dragonboat_v3//statemachine",
        "@com_github_planetscale_vtprotobuf//codec/grpc",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
        "@io_etcd_go_bbolt//:bbolt",
        "@org_golang_google_grpc//encoding",
        "@org_golang_google_grpc//encoding/proto",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "kv_test",
    srcs = [
        "bbolt_fsm_test.go",
        "bbolt_test.go",
    ],
    embed = [":kv"],
    deps = [
        "//pkg/configuration",
        "//pkg/kvpb",
        "//pkg/utils",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lni_dragonboat_v3//statemachine",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@io_etcd_go_bbolt//:bbolt",
        "@org_golang_google_protobuf//proto",
    ],
)
