load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "raftpbconnect",
    srcs = ["service.connect.go"],
    importpath = "github.com/mxplusb/pleiades/pkg/raftpb/raftpbconnect",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/raftpb",
        "@com_github_bufbuild_connect_go//:go_default_library",
    ],
)
