load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gossip",
    srcs = ["serf.go"],
    importpath = "github.com/mxplusb/pleiades/pkg/server/gossip",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/messaging",
        "@com_github_hashicorp_serf//serf",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_fx//:fx",
    ],
)
