load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kvstore",
    srcs = [
        "kvstore_bbolt_connect_adapter.go",
        "kvstore_transaction_connect_adapter.go",
        "module.go",
        "raft_bbolt_store_manager.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/server/kvstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/errorspb",
        "//pkg/fsm/kv",
        "//pkg/kvpb",
        "//pkg/kvpb/kvpbconnect",
        "//pkg/routing",
        "//pkg/server/runtime",
        "//pkg/server/transactions",
        "//pkg/utils",
        "@com_github_bufbuild_connect_go//:go_default_library",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_lni_dragonboat_v3//client:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "kvstore_test",
    srcs = ["raft_bbolt_store_manager_test.go"],
    embed = [":kvstore"],
    deps = [
        "//pkg/configuration",
        "//pkg/kvpb",
        "//pkg/messaging",
        "//pkg/raftpb",
        "//pkg/server/runtime",
        "//pkg/server/shard",
        "//pkg/server/transactions",
        "//pkg/utils",
        "//pkg/utils/serverutils",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
