load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "raft",
    srcs = [
        "module.go",
        "raft_host.go",
        "raft_host_connect_adapter.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/server/raft",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/raftpb",
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server/runtime",
        "@com_github_bufbuild_connect_go//:connect-go",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "raft_test",
    srcs = ["raft_host_test.go"],
    embed = [":raft"],
    deps = [
        "//pkg/server/runtime",
        "//pkg/utils",
        "//pkg/utils/serverutils",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_fx//fxtest",
    ],
)
