load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "shard",
    srcs = [
        "module.go",
        "raft_shard.go",
        "raft_shard_connect_adapter.go",
        "statemachine.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/server/shard",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fsm/kv",
        "//pkg/raftpb",
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server/runtime",
        "//pkg/utils/serverutils",
        "@com_github_bufbuild_connect_go//:go_default_library",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_lni_dragonboat_v3//config:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "shard_test",
    srcs = ["raft_shard_test.go"],
    embed = [":shard"],
    deps = [
        "//pkg/configuration",
        "//pkg/messaging",
        "//pkg/raftpb",
        "//pkg/utils",
        "//pkg/utils/serverutils",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_lni_dragonboat_v3//config:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@org_uber_go_fx//fxtest:go_default_library",
    ],
)
