load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "shard",
    srcs = [
        "module.go",
        "raft_shard.go",
        "raft_shard_connect_adapter.go",
        "statemachine.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/server/shard",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fsm/kv",
        "//pkg/raftpb",
        "//pkg/raftpb/raftpbconnect",
        "//pkg/server/runtime",
        "//pkg/utils/serverutils",
        "@com_github_bufbuild_connect_go//:connect-go",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_lni_dragonboat_v3//config",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "shard_test",
    srcs = ["raft_shard_test.go"],
    embed = [":shard"],
    deps = [
        "//pkg/configuration",
        "//pkg/messaging",
        "//pkg/raftpb",
        "//pkg/utils",
        "//pkg/utils/serverutils",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_lni_dragonboat_v3//config",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_fx//fxtest",
    ],
)
