load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "transactions",
    srcs = [
        "module.go",
        "raft_transaction_manager.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/server/transactions",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kvpb",
        "//pkg/server/runtime",
        "@com_github_cockroachdb_errors//:go_default_library",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_lni_dragonboat_v3//client:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "transactions_test",
    srcs = ["raft_transaction_manager_test.go"],
    embed = [":transactions"],
    deps = [
        "//pkg/utils",
        "//pkg/utils/serverutils",
        "@com_github_lni_dragonboat_v3//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
