load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "serverutils",
    srcs = [
        "logger.go",
        "test_nodehost.go",
        "test_statemachine.go",
    ],
    importpath = "github.com/mxplusb/pleiades/pkg/utils/serverutils",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/messaging",
        "//pkg/utils",
        "@com_github_lni_dragonboat_v3//:dragonboat",
        "@com_github_lni_dragonboat_v3//config",
        "@com_github_lni_dragonboat_v3//logger",
        "@com_github_lni_dragonboat_v3//statemachine",
        "@com_github_lni_goutils//vfs",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_fx//fxtest",
    ],
)
