[package]
name = "pleiades-time-hlc"
version = "1.0.0-alpha"
authors = ["Sienna Lloyd"]
description = "A hybrid logical clock implementation"
license = "GPL-3.0-only"
keywords = ["kv", "distributed-systems", "raft", "constellation", "mesh"]
homepage = "https://github.com/mxplusb/pleiades"
repository = "https://github.com/mxplusb/pleiades"
edition = "2021"
publish = true

[lib]
